# qanglang

./: .gitignore  Cargo.toml  README.md  benchmark.ps1  benchmark.sh  debug.ql  debug_closure.qang  debug_closure_bug.qang  debug_closure_values.qang  debug_iife_test.qang  debug_nested.qang  debug_nested_simple.qang  debug_optional_map.qang  debug_single_test.qang  debug_step.qang  debug_step_simple.qang  debug_three_level.qang  debug_tokenizer.rs  feature.md  fib.ql  for_loop_scope_bug.ql  gc_bug.ql  inline-expressions-adr.md  main.ql  minimal_pipe_test.qang  minimal_test.ql  simple_test.ql  string_concat.ql  test_class_field_validation.ql  test_failures.md  test_function_arg.qang  test_iife_map.qang  test_inheritance_main.ql  test_input.qang  test_map_runner.qang  test_map_simple.qang  test_optional_map.qang  test_optional_map.rs  test_optional_simple.qang  test_original_case.qang  (+4 more)
benchmarks/: arrays.ql  binary_tree.ql  equality.ql  fib.ql  instantiation.ql  invocation.ql  method_call.ql  modules.ql  object_literals.ql  properties.ql  string_equality.ql  trees.ql  zoo.ql  zoo_batch.ql
crates/qanglang-cli/: Cargo.toml
crates/qanglang-cli/src/: main.rs  repl.rs  test_runner.rs
crates/qanglang-core/: Cargo.toml
crates/qanglang-core/src/: arena.rs  ast.rs  chunk.rs  compiler.rs  debug.rs  error.rs  heap.rs  lib.rs  memory.rs  object.rs  parser.rs  pipeline.rs  qang_std.rs  source.rs  stdlib.ql  tokenizer.rs  value.rs  vm.rs
crates/qanglang-core/src/backend/: assembler.rs  builtin_modules.rs  chunk.rs  compiler.rs  external_context.rs  files.ql  fs.rs  mod.rs  module_resolver.rs  object.rs  path.ql  qang_std.rs  stdlib.ql  value.rs  vm.rs
crates/qanglang-core/src/frontend/: analyzer.rs  ast_node_arena.rs  inference_engine.rs  mod.rs  module_map.rs  node_arena.rs  node_array_arena.rs  node_visitor.rs  nodes.rs  parse.rs  parser.rs  scope_analysis.rs  scope_analysis_old.rs  semantic_validator.rs  source.rs  symbol_resolver.rs  tokenizer.rs  type_arena.rs  type_inference.rs  type_resolver.rs  type_scope_manager.rs  typed_node_arena.rs  types.rs
crates/qanglang-core/src/memory/: alloc.rs  arena.rs  array_arena.rs  closure_arena.rs  closure_upvalue_reference.rs  hashmap_arena.rs  heap.rs  mod.rs  object.rs  string_interner.rs  upvalue_overflow_arena.rs
crates/qanglang-core/src/tests/: alloc_tests.rs  analyzer_regressions.rs  compound_assignment_tests.rs  loop_tests.rs  mod.rs  parse_declarations.rs  parse_expressions.rs  parse_statements.rs  parser_errors.rs  regression_tests.rs  source_analysis_test.rs  tail_call_tests.rs  test_type_inference.rs  tokenizing.rs  type_parsing_tests.rs  vm_closure_tests.rs  vm_tests.rs
crates/qanglang-ls/: .vscodeignore  Cargo.toml  esbuild.js  language-configuration.json  package-lock.json  package.json
crates/qanglang-ls/client/: package-lock.json  package.json
crates/qanglang-ls/client/src/: extension.ts
crates/qanglang-ls/src/: analyzer.rs  builtins.rs  completion.rs  completion_test.rs  hover_utils.rs  hover_utils_test.rs  lib.rs  semantic_tokens.rs  server.rs  stdlib_analyzer.rs  symbol_collector.rs
crates/qanglang-ls/syntaxes/: qanglang.tmGrammar.json
crates/qanglang-test/: Cargo.toml
crates/qanglang-test/src/: checker.rs  lib.rs  runner.rs  test_file.rs  test_runner.rs
docs/: astro.config.mjs  package-lock.json  package.json
examples/: classes.ql  fib_closures.ql  functional.ql  imports.ql  iterators.ql  math.ql  other_module.ql  stdlib_usage.ql  string_concat.ql
extension/: README.md  package-lock.json  package.json
scripts/: benchmark.ps1  benchmark.sh  closure_benchmark..ps1  test.ps1  test.sh
src/: ast.rs  chunk.rs  compiler.rs  debug.rs  error.rs  heap.rs  kang_std.rs  lib.rs  main.rs  parser.rs  qang_std.rs  source.rs  tokenizer.rs  value.rs  vm.rs
tests/: module_helper_complex.ql  module_helper_simple.ql  module_other.ql  parser.rs  test_array_literals.ql  test_arrays.ql  test_assertions.ql  test_assignment_expressions.ql  test_block_statements.ql  test_class_declarations.ql  test_comparison_and_equality.ql  test_conditionals.ql  test_constant16.ql  test_control_flow_statements.ql  test_exception_handling.ql  test_files_module.ql  test_function_calls.ql  test_function_declarations.ql  test_hashmap.ql  test_hashset.ql  test_iterators.ql  test_lambda_expressions.ql  test_large_constant_count.ql  test_logical_operations_and_unary_not.ql  test_loops.ql  test_map_expressions.ql  test_math_expressions.ql  (+16 more)
(+79 files in other folders)
