[package]
name = "qanglang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "qanglang"
path = "src/lib.rs"

[profile.release]
debug = "line-tables-only"

[features]
profiler = []

[dependencies]
phf = { version = "0.11.3", features = ["macros"]}
coz = "0.1"
