[package]
name = "qanglang-cli"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "CLI tool for Qanglang"
repository = "https://github.com/yourusername/qanglang"

[[bin]]
name = "qang"
path = "src/main.rs"

[dependencies]
qanglang-core = { version = "0.1.0", path = "../qanglang-core" }
qanglang-ls = { path = "../qanglang-ls" }
qanglang-test = { path = "../qanglang-test" }
clap = {version = "4.5.43", features = ["derive"]}
