[package]
name = "qanglang-core"
version = "0.1.0"
edition = "2024"

[features]
profiler = ["coz"]

[dependencies]
phf = { version = "0.11.3", features = ["macros"]}
generational-arena = "0.2.9"
rustc-hash = { workspace = true }

[target.'cfg(unix)'.dependencies]
coz = { workspace = true, optional = true }