[package]
name = "qanglang-core"
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"
description = "Core library for QangLang"
repository = "https://github.com/yourusername/qanglang"

[features]
profiler = ["coz"]

[dependencies]
phf = { version = "0.11.3", features = ["macros"]}
rustc-hash = { workspace = true }

[target.'cfg(unix)'.dependencies]
coz = { workspace = true, optional = true }