[package]
name = "qanglang-ls"
version = "0.1.0"
edition = "2024"

[dependencies]
qanglang-core = { path = "../qanglang-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}