[package]
name = "qanglang-ls"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Language Server for Qanglang"
repository = "https://github.com/yourusername/qanglang"

[dependencies]
qanglang-core = { version = "0.1.0", path = "../qanglang-core" }
serde = { workspace = true }
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "io-std", "macros"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
env_logger = "0.10.0" 
log = "0.4.27"